TIKA-4397: use isBlank()